2007-04-19  Brian Bidulock  <bidulock@openss7.org>

	* src/modules/sth.c: impl of SNDHOLD and SNDMREAD features

	* include/sys/streams/stropts.h: imp of SNDHOLD and SNDMREAD features
	* include/sys/streams/strsubr.h: imp of SNDHOLD and SNDMREAD features
	* src/test/perftest.c: imp of SNDHOLD and SNDMREAD features

	* doc/man/man9/M_MI.9.man: added manpage

	* include/sys/streams/strsubr.h: SNDHOLD and RFILL modes
	* src/kernel/strprocfs.c: SNDHOLD and RFILL modes
	* src/kernel/strsched.c: SNDHOLD and RFILL modes
	* src/kernel/strutil.c: SNDHOLD and RFILL modes
	* src/modules/sth.c: SNDHOLD and RFILL modes

	* include/sys/streams/stropts.h: added RFILL mode and RPROTCOMPRESS protocol
	* include/sys/streams/stream.h: added M_MI message type and subtypes
	* doc/man/man9/M_SETOPTS.9.man: documented RFILL mode
	* src/test/perftest.c: added new features

2007-04-17  Brian Bidulock  <bidulock@openss7.org>

	* doc/man/man9/queue.9.man
	* include/sys/streams/stream.h: mark stream head queues QSHEAD
	* include/sys/streams/strsubr.h: remove strwsrv
	* src/drivers/clone.c: remove strwsrv
	* src/drivers/fifo.c: remove strwsrv
	* src/drivers/pipe.c: remove strwsrv
	* src/drivers/sfx.c: remove strwsrv
	* src/kernel/strsched.c: mark stream head queues QSHEAD
	* src/kernel/strutil.c: directly backenable write side of stream head
	* src/modules/sth.c: remove strwsrv

	* tests/testsuite-clone.at: testsuite factoring
	* tests/testsuite-connld.at: testsuite factoring
	* tests/testsuite-echo.at: testsuite factoring
	* tests/testsuite-fifo.at: testsuite factoring
	* tests/testsuite-log.at: testsuite factoring
	* tests/testsuite-loop.at: testsuite factoring
	* tests/testsuite-mux.at: testsuite factoring
	* tests/testsuite-nsdev.at: testsuite factoring
	* tests/testsuite-nuls.at: testsuite factoring
	* tests/testsuite-pipe.at: testsuite factoring
	* tests/testsuite-pipemod.at: testsuite factoring
	* tests/testsuite-sad.at: testsuite factoring
	* tests/testsuite-sc.at: testsuite factoring